--- a/scss/layout/_whatsapp.scss
+++ b/scss/layout/_whatsapp.scss
@@ -1,16 +1,70 @@
 .layout_whatsapp{
+	@include flex-center-center;
 	position: fixed;
-	top: 90%;
+	top: 85%;
 	right: 25px;
 	z-index: 100;
-	 
-	@media(min-width:1199px){
-		display: none;
+	gap: 10px;
+
+	&__button{
+		max-width: 82px !important;
+		height: auto;
+		padding: 15px;
+		background-color: #15B633;
+		border-radius: 100%;
+
+		&__img{
+			width: 50px;
+
+			img{
+			
+				width: 100%;
+			}
+		}
+
+		&__close{
+			display: none;
+			width: 50px;
+			color: $white;
+
+			svg{
+				width: 100%;
+			}
+
+		}
+
+		&--active {
+
+			.layout_whatsapp__button__img{
+				display: none;
+
+			}
+
+			.layout_whatsapp__button__close{
+				display: block;
+			}
+
+
+		}
+		
 	}
 
-	img{
-		width: 50px;
-		height: 50px;
+	&:hover{
+		.layout_whatsapp__information{
+			display: block;
+		}
+	}
+
+	&__information{
+		@include flex-center-center;
+		display: none;
+		background-color: #19E53C;
+		border-radius: 6px;
+		width: 100%;
+		padding: 10px;
+		font-size: 17px;
+		color: $white;
+
 	}
 	
 }
