--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'layout/whatsapp';
 @import 'layout/menu';
 @import 'layout/footer';
+@import 'layout/chatWhatsapp';
 
 //*Components home
 @import 'components/home/service';
@@ -49,6 +50,7 @@
 	padding: 0;
 	font-family: Arial,Helvetica,sans-serif;
 	box-sizing: border-box;
+	
 
 }
 
