--- a/scss/layout/_whatsapp.scss
+++ b/scss/layout/_whatsapp.scss
@@ -1,10 +1,14 @@
 .layout_whatsapp{
 	@include flex-center-center;
 	position: fixed;
-	top: 85%;
+	bottom: 20px;
 	right: 25px;
 	z-index: 100;
 	gap: 10px;
+
+	@media(min-width: 1199px){
+		bottom: 20px;
+    }
 
 	&__button{
 		max-width: 82px !important;
