--- a/css/main.css
+++ b/css/main.css
@@ -478,7 +478,10 @@
     right: 5%; }
     @media (min-width: 414px) {
       .chat_whatsApp--active {
-        top: 40%; } }
+        top: 25%; } }
+    @media (min-width: 992px) {
+      .chat_whatsApp--active {
+        top: 35%; } }
   .chat_whatsApp__top {
     display: flex;
     justify-content: center;
