--- a/css/main.css
+++ b/css/main.css
@@ -464,7 +464,7 @@
 .chat_whatsApp {
   width: 90%;
   margin: auto;
-  height: 320px;
+  height: 230px;
   position: fixed;
   bottom: -200%;
   right: 5%;
@@ -503,14 +503,14 @@
       font-size: 13px; }
   .chat_whatsApp__agent {
     background-color: #FFFFFF;
-    height: 320px;
-    overflow-y: scroll;
+    height: 230px;
+    /*overflow-y: scroll;*/
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 10px;
-    padding: 120px 15px 15px 15px; }
+    padding: 15px 15px 15px 15px; }
     .chat_whatsApp__agent::-webkit-scrollbar-thumb {
       background-color: #2DB742;
       /* color of the scroll thumb */
