--- a/scss/components/home/_clients.scss
+++ b/scss/components/home/_clients.scss
@@ -189,12 +189,8 @@
         @include flex-center-center;
         
         &--img{
-            width: 50%;
+            width: 175px;
             margin: auto;
-
-            img{
-                width: 100%;
-            }
 
             
         }
