--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer{
 	width: 100%;
-	background-color: $heavy_metal;
+	/*background-color: $heavy_metal;*/
 	padding: 30px 0;
 	position: absolute;
 
