--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -1,7 +1,8 @@
 $black: #000000;
 $white: #FFFFFF;
 
-$heavy_metal:#2F2E2E;
+/*$heavy_metal:#2F2E2E;*/
+
 
 $mikado_yellow:#FFCB00;
 $saffron_mango:#E1CB5E;
