--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
 	width: 100%;
 	height: 118px;
-	background-color: $heavy_metal;
+	background-color: transparent;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -28,12 +28,8 @@
 			@include flex-center-between;
 			
 			&__logo {
-				width: 171px;
-				height:88px ;
-	
-				img{
-					width: 100%;
-				}
+				width: 120px;
+				height:73px ;
 	
 			}
 	
@@ -42,14 +38,13 @@
 				height: 43px;
 				@include flex-center-center;
 				cursor: pointer;
-				border: 1px solid $saffron_mango;
 				border-radius: 4px;
 				padding: 10px;
 	
 				&__bar {
 					width: 100%;
 					height: 2px;
-					background-color: $storm_dust;
+					background-color: $black;
 					position: relative;
 					transition: 0.3s;
 	
@@ -60,7 +55,7 @@
 						height: 100%;
 						top: -8px;
 						left: 0;
-						background-color: $storm_dust;
+						background-color: $black;
 						transition: 0.3s;
 					}
 	
@@ -71,13 +66,13 @@
 						height: 100%;
 						bottom: -8px;
 						left: 0;
-						background-color: $storm_dust;
+						background-color: $black;
 						transition: 0.3s;
 					}
 	
 				}
 	
-				&--active {
+				/*&--active {
 					border: 1px solid transparent;
 				
 					.header__mobile__top__toggle__bar {
@@ -96,244 +91,45 @@
 						}
 					}
 	
-				}
+				}*/
 			}
 		}
 		
-		&__contact{
-			padding-top: 10px;
-			
-			&__item{
-				padding-top: 20px;
-				@include flex-center-center;
-				gap: 10px;
-				color: $white;
-				font-size: 18px;
-				text-decoration: underline;
-				
-				&__icon{
-					width: 16px;
-					
-					svg{
-						width: 100%;
-					}
-				}
-			}
-
-			p{
-				padding-top: 5px;
-				color: $white;
-				text-align: center;
-				font-size: 18px;
-				text-decoration: underline;
-			}
-
-		}
-
-		&__bottom{
-			padding-top: 60px;
-			width: 100%;
-			margin: auto;
-
-			p{
-			
-				color:$mikado_yellow;
-				font-size: 20px;
-				text-align: center;
-				font-weight: bold;
-				line-height: 1.8em;
-				letter-spacing: 0em;
-			}
-
-			p.green{
-				color:$vibrant_green;
-			}
-
-		}
 
 	}
 
 	&__desktop {
 		width: 100%;
 		height: 100%;
-		display: none;
+		background-color: black;
+		display: none; 
+	
 
 		@media(min-width: 1200px) {
 			display: block;
+
+			.container-sm{
+				@include flex-center-between;
+			}
+			
 		}
 
-		&__top{
+		&__logo{
+			width: 192px;
+			height: 117px;
+		}
+
+		&__pages{
 			display: flex;
-			justify-content:space-between;
-			gap: 50px;
-			padding: 33px 0;
+			gap: 40px;
 
-			&__logo{
-				width: 269px;
-				margin-top: 36px;
-	
-				img{
-					width: 100%;
-				}
-			}
-
-			&__contact{
-				
-				h1{
-					width: 100%;
-					font-size: 19px;
-					color: $mikado_yellow;
-					letter-spacing: normal;
-					line-height: normal;
-					font-weight: bold;
-				}
-
-				&__form{
-					width: 100%;
-					padding-top: 30px;
-					display: grid;
-					grid-template-columns: repeat(3, 1fr);
-
-					&__item{
-						display: flex;
-						flex-direction: column;
-
-						p{
-							color: $white;
-							font-size: 14px;	
-							padding-bottom: 10px;
-						}
-
-						&__text{
-							@include flex-a-center;
-							gap: 10px;
-							color: $white;
-							font-size:22px;
-							text-decoration: underline;
-
-							&__icon{
-								width: 16px;
-
-								svg{
-									width: 100%;
-									height: 100%;
-								}
-			
-							}
-						}
-					
-						
-					}
-
-					&__item_line{
-						display: flex;
-						flex-direction: column;
-						border-left: 1px solid $mikado_yellow;
-						border-right:1px solid $mikado_yellow ;
-						padding: 0 20px;
-
-						p{
-							color: $white;
-							font-size: 14px;	
-							padding-bottom: 10px;
-						}
-
-
-						&__text{
-							@include flex-a-center;
-							gap: 10px;
-							color: $white;
-							font-size:22px;
-							text-decoration: underline;
-
-							&__icon{
-								width: 16px;
-
-								svg{
-									width: 100%;
-									height: 100%;
-								}
-			
-							}
-						}
-						
-
-					}
-				}
-
-			}
-
-		}
-
-		&__medium{
-			@include flex-j-center;		
-			width: 100%;
-			background-color: $cobalt;
-			padding: 5px 0;
-
-			&__bottom{
-				border-right: 1px solid $mikado_yellow;
+			a{
+				font-weight: 700;
+				font-size: 12px;
 				color: $white;
-				font-size: 18px;
-				line-height:16px;
-				padding: 15px;
-
-				@media(min-width:1400px){
-					padding: 15px 50px
-				}
-				
-				&--active{
-					border-right: 1px solid $mikado_yellow;
-					color: $white;
-					font-size: 18px;
-					padding: 15px 50px;
-					background-color: $heavy_metal;
-
-					&:hover{
-						background-color: $white;
-						color: $heavy_metal;
-					}
-				}
-
-				&:hover{
-					background-color: $white;
-					color: $heavy_metal;
-					
-				}
-
 			}
-
 		}
 
-		&__bottom{
-			padding: 20px 0;
-			width: 100%;
-			margin: auto;
-
-			p{
-			
-				color:$mikado_yellow;
-				font-size: 18px;
-				text-align: center;
-				font-weight: bold;
-				line-height: 1.8em;
-				letter-spacing: 0em;
-
-				@media(min-width: 1199px){
-					font-size: 28px;
-				}
-			}
-
-			p.green{
-				color:$vibrant_green;
-			}
-
-		}
-
-		.whtas {
-			flex-direction: column !important;
-			width: 143px;
-		}
 
 	}
 
