--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -4,7 +4,7 @@
 	position: fixed;
 	top: -200%;
     left: 0;
-	background-color: $heavy_metal;
+	/*background-color: $heavy_metal;*/
 	z-index: 100;
 	padding: 30px 0;
 	transition: 0.3s;
