--- a/css/main.css
+++ b/css/main.css
@@ -150,76 +150,46 @@
         font-size: 12px;
         color: #FFFFFF; }
 
-.layout_whatsapp {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  bottom: 35px;
-  right: 25px;
-  z-index: 100;
-  gap: 10px; }
-  @media (min-width: 1199px) {
-    .layout_whatsapp {
-      bottom: 80px; } }
-  .layout_whatsapp__button {
-    max-width: 82px !important;
-    height: auto;
-    padding: 15px;
-    background-color: #15B633;
-    border-radius: 100%; }
-    .layout_whatsapp__button__img {
-      width: 50px; }
-      .layout_whatsapp__button__img img {
-        width: 100%; }
-    .layout_whatsapp__button__close {
-      display: none;
-      width: 50px;
-      color: #FFFFFF; }
-      .layout_whatsapp__button__close svg {
-        width: 100%; }
-    .layout_whatsapp__button--active .layout_whatsapp__button__img {
-      display: none; }
-    .layout_whatsapp__button--active .layout_whatsapp__button__close {
-      display: block; }
-  .layout_whatsapp__information {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: block;
-    background-color: #19E53C;
-    border-radius: 6px;
-    width: 100%;
-    padding: 10px;
-    font-size: 17px;
-    color: #FFFFFF; }
-
 .menu {
-  width: 100%;
+  width: 65%;
   height: 100vh;
   position: fixed;
-  top: -200%;
-  left: 0;
-  /*background-color: $heavy_metal;*/
+  top: 0;
+  left: -200%;
+  background-color: #000000;
   z-index: 100;
-  padding: 30px 0;
+  padding: 30px 5px;
   transition: 0.3s; }
   .menu--active {
-    top: 100px; }
+    left: 0%; }
+  .menu__button {
+    width: 25px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #FFFFFF; }
+    .menu__button svg {
+      width: 100%; }
   .menu .container {
     height: 100%;
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 50px; }
-    .menu .container a {
-      font-size: 18px;
-      color: #FFCB00;
-      text-transform: uppercase;
-      padding: 10px 0;
-      transition: 0.3s; }
-    .menu .container hr {
-      width: 100%; }
+    flex-direction: column; }
+  .menu__media {
+    display: flex;
+    gap: 10px;
+    padding-bottom: 30px; }
+    .menu__media a {
+      width: 19px;
+      color: #F7C50A; }
+  .menu__link a {
+    font-size: 12px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    transition: 0.3s; }
+  .menu__link hr {
+    margin: 10px 0;
+    width: 100%;
+    border: 0.09px solid #605E5E; }
 
 .footer {
   width: 100%;
@@ -335,106 +305,24 @@
       font-size: 9px;
       padding-top: 20px; }
 
-.chat_whatsApp {
-  width: 90%;
-  margin: auto;
-  height: 230px;
+.media {
   position: fixed;
-  bottom: -200%;
-  right: 5%;
-  z-index: 100;
-  transition: 0.3s;
-  border-radius: 10px; }
-  @media (min-width: 1199px) {
-    .chat_whatsApp {
-      right: 5%;
-      width: 352px; } }
-  .chat_whatsApp--active {
-    right: 5%;
-    bottom: 250px; }
-    @media (min-width: 1199px) {
-      .chat_whatsApp--active {
-        bottom: 300px; } }
-  .chat_whatsApp__top {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    background-color: #15B933;
-    border-top-left-radius: 10px 10px;
-    border-top-right-radius: 10px 10px;
-    padding: 15px; }
-    .chat_whatsApp__top__logo {
-      width: 35px; }
-      .chat_whatsApp__top__logo img {
-        width: 100%; }
-    .chat_whatsApp__top__text h1 {
-      color: #FFFFFF;
-      font-size: 15px;
-      font-weight: semibold; }
-    .chat_whatsApp__top__text p {
-      color: #FFFFFF;
-      padding-top: 10px;
-      font-size: 13px; }
-  .chat_whatsApp__agent {
-    background-color: #FFFFFF;
-    height: 230px;
-    /*overflow-y: scroll;*/
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px;
-    padding: 15px 15px 15px 15px; }
-    .chat_whatsApp__agent::-webkit-scrollbar-thumb {
-      background-color: #2DB742;
-      /* color of the scroll thumb */
-      border-radius: 20px;
-      /* roundness of the scroll thumb */
-      /* creates padding around scroll thumb */ }
-    .chat_whatsApp__agent__target {
-      padding: 15px;
-      width: 100%;
-      border: 1px solid #2DB742;
-      border-radius: 3px;
+  top: 250px;
+  left: 0px;
+  display: none;
+  transform: rotate(270deg);
+  z-index: 110; }
+  @media (min-width: 992px) {
+    .media {
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 15px; }
-      .chat_whatsApp__agent__target__information {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px; }
-        .chat_whatsApp__agent__target__information__imagen {
-          width: 57px; }
-          .chat_whatsApp__agent__target__information__imagen img {
-            width: 100%; }
-        .chat_whatsApp__agent__target__information__word h1 {
-          font-size: 20px;
-          font-weight: bold;
-          color: #000000;
-          font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-        .chat_whatsApp__agent__target__information__word p {
-          font-size: 13px;
-          font-weight: normal;
-          color: #000000;
-          font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-      .chat_whatsApp__agent__target__icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 7px;
-        background-color: #15B633;
-        border-radius: 100%; }
-        .chat_whatsApp__agent__target__icon img {
-          width: 20px; }
-      .chat_whatsApp__agent__target:hover {
-        background-color: #CFCFCF; }
-
-.chat_whatsApp__agent::-webkit-scrollbar {
-  width: 3px;
-  background-color: transparent;
-  /* or add it to the track */ }
+      align-items: flex-start;
+      gap: 30px; } }
+  .media a {
+    transform: rotate(90deg);
+    width: 19px;
+    font-weight: 700;
+    font-size: 12px;
+    color: #000000; }
 
 * {
   margin: 0;
