--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -4,7 +4,7 @@ $white: #FFFFFF;
 /*$heavy_metal:#2F2E2E;*/
 
 
-$mikado_yellow:#FFCB00;
+$mikado_yellow:#F7C50A;
 $saffron_mango:#E1CB5E;
 $candlelight:#FFDA1F;
 $naples_yellow:#FBDB5B;
