--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -1,40 +1,64 @@
 .menu{
-	width: 100%;
+	width: 65%;
 	height: 100vh;
 	position: fixed;
-	top: -200%;
-    left: 0;
-	/*background-color: $heavy_metal;*/
+	top: 0;
+    left: -200%;
+	background-color: $black;
 	z-index: 100;
-	padding: 30px 0;
+	padding: 30px 5px;
 	transition: 0.3s;
 
 	&--active{
-		top: 100px;
+		left: 0%;
+	}
+
+	
+
+	&__button{
+		width: 25px;
+		position: absolute;
+		top: 0;
+		right: 0;
+		color: $white;
+
+		svg{
+			width: 100%;
+		}
 	}
 
 	.container{
 		height: 100%;
 		display: flex;
-		align-items: center;
 		flex-direction: column;
-		padding: 0 50px;
+	}
+
+	&__media{
+		display: flex;
+		gap:10px;
+		padding-bottom: 30px;
 
 		a{
-			font-size: 18px;
+			width: 19px;
 			color: $mikado_yellow;
-			text-transform: uppercase;
-			padding: 10px 0;
-			transition: 0.3s;
+		}
 
+	}
+
+	&__link{
+
+		a{
+			font-size: 12px;
+			color: $white;
+			text-transform: uppercase;
+			transition: 0.3s;
 		}
 
 		hr{
+			margin: 10px 0;
 			width: 100%;
+			border: 0.09px solid $carbon_grey;
 		}
-
-
-
 	}
 
 }
