--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,12 +7,11 @@
 @import 'mixins/flex';
 
 //* Layouts
-
 @import 'layout/header';
-@import 'layout/whatsapp';
 @import 'layout/menu';
 @import 'layout/footer';
-@import 'layout/chatWhatsapp';
+@import 'layout/media';
+
 
 
 *{
